# wren

./: .firebaserc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: API.md  enumerated-noodling-moler.md  federated-snacking-quasar.md  sync-infrastructure.md
scripts/: build-macos.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  pdfium_stubs.c  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.kreuzberg/ocr/: 0099d722e2f4afb9.msgpack  0206478b148ba630.msgpack  0291652589c696b1.msgpack  02941bb06e1e7a44.msgpack  0397b3e47fa94875.msgpack  03ab5efa01302020.msgpack  03cbe04dbd23cb0f.msgpack  03e313dd93c6262c.msgpack  03eba3e0c39ddf34.msgpack  0498d8b9b03af4c9.msgpack  04cd059c311be1f4.msgpack  050f973ceb0d2fc6.msgpack  057199fe2f70cf86.msgpack  05c4feb926319494.msgpack  0635feb7a47687f7.msgpack  06c550653a00a265.msgpack  07272776ff96af5d.msgpack  078477ca998addde.msgpack  078f032fb30a9a1b.msgpack  07ad6827442568f6.msgpack  08c25e415dd21445.msgpack  090100f8ad66d239.msgpack  09371d85e1dcd54c.msgpack  0986ebb8e3d5882b.msgpack  0abea6a26429fa61.msgpack  0c570d777a79e4cc.msgpack  0cc65a0025feb533.msgpack  0cd2d7091b032769.msgpack  0e233c42a16d35df.msgpack  0e32007b3c2d617e.msgpack  0ea25dab69157ea1.msgpack  0f2bb06ad26ee97d.msgpack  0fc7a6d1dc879621.msgpack  107f0da0ce4305f8.msgpack  10e8fd5ba2ebd6d1.msgpack  11102c233d8aa33a.msgpack  112b93e0b6439367.msgpack  1177d70e34e60714.msgpack  11bebdbc352e16a5.msgpack  120cf428b7321632.msgpack  (+557 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  deep_link.rs  filename.rs  lib.rs  main.rs  state.rs  tray.rs  utils.rs
src-tauri/src/commands/: annotations.rs  archive_export.rs  archive_import.rs  archive_types.rs  auth.rs  collections.rs  connector.rs  duplicates.rs  entries.rs  entry_links.rs  export.rs  graph.rs  import.rs  inline_tables.rs  items.rs  llm.rs  metadata_ai.rs  mod.rs  rag.rs  saved_searches.rs  schema.rs  search.rs  settings.rs  sharing.rs  tags.rs
src-tauri/src/connector/: api_handlers.rs  handlers.rs  mod.rs  models.rs  server.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs
src-tauri/src/docparse/: blocks.rs  config.rs  convert.rs  engine.rs  entities.rs  mod.rs  models.rs  pdf.rs
src-tauri/src/firebase/: auth.rs  firestore.rs  listener.rs  mod.rs
src-tauri/src/graph/: chunker.rs  doc_types.rs  embeddings.rs  knowledge.rs  mod.rs  relate.rs  search.rs  sync.rs  vectors.rs
src-tauri/src/jobs/: commands.rs  executor.rs  mod.rs  queue.rs  types.rs
src-tauri/src/llm/: anthropic.rs  context_windows.rs  gemini.rs  lmstudio.rs  metadata_extractor.rs  mod.rs  ollama.rs  omlx.rs  openai.rs  prompts.rs  provider.rs
src-tauri/src/llm/pipeline/: assembler.rs  boundary_finder.rs  chunker.rs  classifier.rs  discoverer.rs  extractor.rs  mod.rs  pre_analysis.rs  utf8.rs
src-tauri/src/pdf/: annotations.rs  metadata.rs  mod.rs
src-tauri/src/rag/: chunker.rs  embeddings.rs  indexer.rs  mod.rs  raptor.rs  retrieval.rs  store.rs
src-tauri/src/search/: extractor.rs  indexer.rs  mod.rs  parser.rs  schema.rs  searcher.rs
src-tauri/src/sync/: engine.rs  entry_json.rs  globals.rs  merge.rs  mod.rs  outbox.rs  r2.rs  reader.rs  share_sync.rs  sharing.rs  watcher.rs  writer.rs
src-tauri/tests/: docparse_e2e.rs
src/components/: ErrorBoundary.tsx
src/components/dialogs/: BackupImportModeDialog.tsx  ClaimRelationsDialog.tsx  CollectionManagementDialog.tsx  DeleteConfirmationDialog.tsx  ExportOptionsDialog.tsx  ImportPreviewDialog.tsx  RaptorSummariesDialog.tsx  SaveSearchDialog.tsx  ShareDialog.tsx  TagManagementDialog.tsx
src/components/dnd/: DragDropProvider.tsx  DraggableTableRow.tsx  DroppableCollection.tsx  DroppableTag.tsx  DroppableTrash.tsx
src/components/editor/: EditorSearchBar.tsx  EditorToolbar.tsx  MarkdownEditor.tsx  NoteCommentPopover.tsx  NoteEditor.tsx  RichMarkdownEditor.tsx  SlashSearchPanel.tsx  useMarkdownSearch.ts
src/components/editor/extensions/: markdownRendering.ts  markdownTheme.ts  noteAnnotations.ts  shikiHighlighter.ts  slashCommands.css  (+1 more)
src/components/epub/: EPUBOutlinePanel.tsx  EPUBViewer.css  EPUBViewer.tsx  useEPUBAnnotations.ts  useEPUBSearch.ts
src/components/jobs/: JobListPanel.tsx
src/components/layout/: AppLayout.tsx  TitleBar.tsx
src/components/pdf/: AnnotationPanel.tsx  EditToolbar.tsx  HighlightPopup.tsx  HighlightRenderer.tsx  OutlinePanel.tsx  PDFLeftPanel.tsx  PDFPrintView.tsx  PDFToolbar.tsx  PDFViewer.css  PDFViewer.tsx  PageNavigation.tsx  SearchPopover.tsx  SidebarSearchInput.tsx  ZoomControls.tsx  pdf-viewer.css  pdfAnnotationUtils.ts  usePDFAnnotations.ts  usePDFInteractions.ts  usePDFNavigation.ts  usePDFSearch.ts  usePDFTextSelection.ts
src/components/search/: AdvancedSearchDialog.tsx  CommandPalette.tsx  CommandPaletteCommands.tsx  CommandPaletteSearch.tsx  SearchCriteriaRow.tsx  SearchResults.tsx  searchFieldConfig.ts  useCommandPaletteActions.ts  useViewerContext.ts
src/components/settings/: SettingsDialog.tsx
src/components/ui/: AppLogo.tsx  Toaster.tsx  badge.tsx  button.tsx  checkbox.tsx  context-menu.tsx  resizable.tsx  scroll-area.tsx  tooltip.tsx
src/components/viewer/: ExtractedContentViewer.tsx  HTMLAnnotationPanel.tsx  HTMLOutlinePanel.tsx  HTMLToolbar.tsx  HTMLViewer.css  HTMLViewer.tsx  ImageViewer.tsx  MarkdownViewer.tsx  ParsedContentPanel.tsx  annotationColors.ts  html-range-serializer.ts  useHTMLAnnotations.ts  useHTMLSearch.ts
src/hooks/: useKeyboardShortcuts.ts  useLibrarySync.ts
src/lib/: filters.ts  icons.tsx  isInActiveView.ts  utils.ts  wrenLinks.ts
src/services/tauri/: commands.ts
src/stores/: jobStore.ts  libraryStore.ts  schemaStore.ts  settingsStore.ts  tabStore.ts  toastStore.ts  uiStore.ts
src/types/: schema.ts
(+109 files in other folders)
