[package]
name = "wren"
version = "0.1.0"
description = "A reference manager for PDFs and markdown notes"
authors = ["Sadanand Singh"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "wren_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# PDF metadata extraction
lopdf = "0.34"

# Document extraction (PDF, EPUB, HTML, images, DOCX, 56+ formats)
kreuzberg = { version = "4", features = ["pdf", "bundled-pdfium", "html", "ocr", "office"] }

# Markdown processing
comrak = { version = "0.28", features = ["syntect"] }

# Full-text search
tantivy = "0.22"

# Embeddings & vector store
fastembed = "5"
lancedb = "0.26"
arrow = "57"

# Async stream utilities
futures = "0.3"

# File watching (for later phases)
# notify = "7"

# BibTeX/BibLaTeX parsing and writing
biblatex = "0.11"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Regex
regex = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
directories = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
