[package]
name = "wren"
version = "0.1.0"
description = "A reference manager for PDFs and markdown notes"
authors = ["Sadanand Singh"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "wren_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# PDF metadata extraction
lopdf = "0.34"

# PDF parsing (ferrules: layout analysis + OCR + table detection)
ferrules-core = { path = "../../ferrules/ferrules-core" }
# Pin ort-sys to match ferrules-core's ort rc.9 (rc.10 has incompatible API)
ort-sys = "=2.0.0-rc.9"

# Document parsing (non-PDF formats)
html2text = "0.12"
undoc = { git = "https://github.com/iyulab/undoc", features = ["docx", "xlsx", "pptx", "async"] }
epub = "2"

# Markdown processing
comrak = { version = "0.28", features = ["syntect"] }

# Full-text search
tantivy = "0.22"

# Vector store for RAG
lancedb = { version = "0.26", default-features = false }
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# AST-based code chunking for RAG
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.23"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-swift = "0.7"
tree-sitter-md = "0.5"
tree-sitter-toml-ng = "0.7"

# Parallel processing (RAPTOR kNN graph)
rayon = "1.11"

# Linear algebra (RAPTOR UMAP + GMM clustering)
nalgebra = "0.32"
rand = "0.8"
ndarray = "0.15"

# Async stream utilities
futures = "0.3"

# File watching (for later phases)
# notify = "7"

# BibTeX/BibLaTeX parsing and writing
biblatex = "0.11"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Regex
regex = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
directories = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
